Fix issues related to canvas overflow

--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ canvas#glcanvas {
     width: 100%;
     height: 100%;
     aspect-ratio: 7/5;
+    overflow: hidden;
     background: black;
     z-index: 0;
 }
